1. 경제 캘린더 이벤트 없을 때 exception -> log.info 2. 경제 캘린더 이벤트 중복 시 최신 데이터로 치환 로직 추가 3. Log 조회 response 객체 수정