@@ -5,6 +5,7 @@ import org.springframework.stereotype.Service;
 import toy.slick.controller.vo.response.DeleteRes;
 import toy.slick.controller.vo.response.LogRes;
 import toy.slick.repository.mongodb.LogRepository;
+import toy.slick.repository.mongodb.MongoData;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -17,27 +18,45 @@ public class LogService {
         this.logRepository = logRepository;
     }
 
-    public List<LogRes> getLogList() {
-        return logRepository.findAll(Sort.by("_id").descending())
-                .stream()
-                .map(o -> LogRes.builder()
-                        .id(o.get_id())
-                        .message(o.getLog())
-                        .timestamp(o.get_timestamp())
-                        .build())
-                .collect(Collectors.toList());
+    public LogRes getLogList() {
+        List<LogRepository.Log> logList = logRepository.findAll(Sort.by("_id").descending());
+
+        return LogRes.builder()
+                .idList(logList
+                        .stream()
+                        .map(MongoData::get_id)
+                        .collect(Collectors.toList()))
+                .logList(logList
+                        .stream()
+                        .map(o -> LogRes.Log.builder()
+                                .id(o.get_id())
+                                .message(o.getLog())
+                                .timestamp(o.get_timestamp())
+                                .build())
+                        .collect(Collectors.toList()))
+                .build();
     }
 
-    public List<LogRes> getLogList(String likeMessage) {
-        return logRepository.findAll(Sort.by("_id").descending())
+    public LogRes getLogList(String likeMessage) {
+        List<LogRepository.Log> logList = logRepository.findAll(Sort.by("_id").descending())
                 .stream()
                 .filter(o -> o.getLog().contains(likeMessage))
-                .map(o -> LogRes.builder()
-                        .id(o.get_id())
-                        .message(o.getLog())
-                        .timestamp(o.get_timestamp())
-                        .build())
-                .collect(Collectors.toList());
+                .toList();
+
+        return LogRes.builder()
+                .idList(logList
+                        .stream()
+                        .map(MongoData::get_id)
+                        .collect(Collectors.toList()))
+                .logList(logList
+                        .stream()
+                        .map(o -> LogRes.Log.builder()
+                                .id(o.get_id())
+                                .message(o.getLog())
+                                .timestamp(o.get_timestamp())
+                                .build())
+                        .collect(Collectors.toList()))
+                .build();
     }
 
     public DeleteRes delete(List<String> idList) {
